--- a/package.json
+++ b/package.json
@@ -7,19 +7,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
-    "bufferutil": "^4.0.1",
-    "child_process": "^1.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "md5": "^2.3.0",
     "mongoose": "^5.9.28",
     "mongoose-sequence": "^5.2.2",
-    "node-gyp": "^7.1.0",
-    "require-dir": "^1.2.0",
-    "serverless": "^2.9.0",
-    "utf-8-validate": "^5.0.2",
-    "util": "^0.12.3",
-    "validator": "^13.1.1"
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.718.0",
