--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "md5": "^2.3.0",
     "mongoose": "^5.9.28",
     "mongoose-sequence": "^5.2.2",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "yargs": "^16.1.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.718.0",
