--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "express.js",
   "bin": "express.js",
   "dependencies": {
-    "axios": "^0.19.2",
-    "bcrypt": "^5.0.0",
+    "bytenode": "^1.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
-    "md5": "^2.3.0",
     "mongoose": "^5.9.28",
     "mongoose-sequence": "^5.2.2",
     "require-dir": "^1.2.0",
@@ -18,6 +15,7 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.718.0",
+    "serverless": "^2.11.1",
     "serverless-offline": "^6.8.0"
   },
   "scripts": {
