--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 
-service: ludo
+service: test-bytecode-deploy
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
